--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.5.3",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.12.7",
+    "node-html-to-image": "^3.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
